service details link removal

--- a/Arino - Template/contact.html
+++ b/Arino - Template/contact.html
@@ -157,7 +157,7 @@
                         <a href="service.html">Services</a>
                       </li>
                       <li>
-                        <a href="service-details.html">Service Details</a>
+                        <a href="">Service Details</a>
                       </li>
                     </ul> -->
                   </li>
@@ -370,16 +370,16 @@
               <h2 class="cs-widget_title">Services</h2>
               <ul class="cs-menu_widget cs-mp0">
                 <li>
-                  <a href="service-details.html">UI/UX & Graphic Design</a>
+                  <a href="">UI/UX & Graphic Design</a>
                 </li>
                 <li>
-                  <a href="service-details.html">Photography & Videography</a>
+                  <a href="">Photography & Videography</a>
                 </li>
                 <li>
-                  <a href="service-details.html">Digital marketing</a>
+                  <a href="">Digital marketing</a>
                 </li>
                 <li>
-                  <a href="service-details.html">Social Media Management</a>
+                  <a href="">Social Media Management</a>
                 </li>
               </ul>
             </div>
