--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -155,7 +155,7 @@
                         <a href="service.html">Services</a>
                       </li>
                       <li>
-                        <a href="service-details.html">Service Details</a>
+                        <a href="">Service Details</a>
                       </li>
                     </ul> -->
                   </li>
@@ -380,7 +380,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/Image8@3x.jpg" alt="Service">
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -394,7 +394,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/Image 3@3x.jpg" alt="Service">
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -407,7 +407,7 @@
               </div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/Image1@3x.jpg" alt="Service">
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -421,7 +421,7 @@
               <div class="col-lg-3 col-sm-6 cs-hidden_mobile"></div>
               <div class="col-lg-3 col-sm-6">
                 <div class="cs-hobble">
-                  <a href="service-details.html" class="cs-card cs-style1 cs-hover_layer1">
+                  <a href="" class="cs-card cs-style1 cs-hover_layer1">
                     <img src="assets/img/service_4.jpeg" alt="Service">
                     <div class="cs-card_overlay"></div>
                     <div class="cs-card_info">
@@ -714,16 +714,16 @@
                 <h2 class="cs-widget_title">Services</h2>
                 <ul class="cs-menu_widget cs-mp0">
                   <li>
-                    <a href="service-details.html">UI/UX & Graphic Design</a>
+                    <a href="">UI/UX & Graphic Design</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Photography & Videography</a>
+                    <a href="">Photography & Videography</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Digital marketing</a>
+                    <a href="">Digital marketing</a>
                   </li>
                   <li>
-                    <a href="service-details.html">Social Media Management</a>
+                    <a href="">Social Media Management</a>
                   </li>
                 </ul>
               </div>
