Added services to the pages

--- a/Arino - Template/index.html
+++ b/Arino - Template/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Laralink">
-    <!-- Favicon Icon -->
-    <!-- <link rel="icon" href="a"> -->
+  <!-- Favicon Icon -->
+  <link rel="icon" href="assets/img/icons/favicon.ico">
     <!-- Site Title -->
     <title>Iconique Edge - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -455,7 +455,7 @@
             <div class="cs-slide">
               <a href="#" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
-                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_1.jpeg"></div>
+                <div class="cs-portfolio_bg" data-src="assets/img/project_1.jpeg" style="background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
                   <h2 class="cs-portfolio_title">Colorful Art Work</h2>
@@ -467,7 +467,7 @@
             <div class="cs-slide">
               <a href="#" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
-                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_2.jpeg"></div>
+                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_3.jpeg" style="background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
                   <h2 class="cs-portfolio_title">Colorful Art Work</h2>
@@ -479,7 +479,7 @@
             <div class="cs-slide">
               <a href="#" class="cs-portfolio cs-style1 cs-bg">
                 <div class="cs-portfolio_hover"></div>
-                <div class="cs-portfolio_bg" data-src="assets/img/portfolio_3.jpeg"></div>
+                <div class="cs-portfolio_bg" data-src="assets/img/project_2.jpeg" style="background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
                 <div class="cs-portfolio_info">
                   <div class="cs-portfolio_info_bg cs-accent_bg"></div>
                   <h2 class="cs-portfolio_title">Colorful Art Work</h2>
