--- a/Arino - Template/service.html
+++ b/Arino - Template/service.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Favicon Icon -->
-  <link rel="icon" href="assets/img/favicon.png">
+  <link rel="icon" href="assets/img/icons/favicon.ico">
   <!-- Site Title -->
   <title>Arino - Creative Agency Template</title>
   <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
@@ -312,11 +312,11 @@
             <div class="col-lg-3 col-sm-6">
               <div class="cs-hobble">
                 <a href="" class="cs-card cs-style1 cs-hover_layer1">
-                  <img src="assets/img/Image1@3x.jpg" alt="Service">
+                  <img src="assets/img/Image 6@3x.jpg" alt="Service">
                   <div class="cs-card_overlay"></div>
                   <div class="cs-card_info">
                     <span class="cs-hover_layer3 cs-accent_bg"></span>
-                    <h2 class="cs-card_title">Digital Marketing</h2>
+                    <h2 class="cs-card_title">Digitual Marketing</h2>
                   </div>
                 </a>
               </div>
@@ -342,7 +342,93 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
+  <!-- End Service Section --> 
+  <div class="cs-height_150 cs-height_lg_80"></div>
+    <!-- Start services Project -->
+    <section>
+      <div class="cs-height_90 cs-height_lg_45"></div>
+      <div class="container">
+        <div class="cs-iconbox_3_list">
+          <div class="cs-hover_tab active">
+            <a href="#" class="cs-iconbox cs-style3">
+              <div class="cs-image_layer cs-style1 cs-size_md">
+                <div class="cs-image_layer_in">
+                  <img src="assets/img/Image 7@3x.jpg" alt="Image" class="w-100 cs-radius_15">
+                </div>
+              </div>
+              <span class="cs-iconbox_icon cs-center">
+                <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.3803 3.05172C29.4089 1.94752 28.537 1.02921 27.4328 1.00062L9.43879 0.534749C8.33459 0.506159 7.41628 1.37811 7.38769 2.48231C7.35911 3.58651 8.23106 4.50482 9.33526 4.53341L25.3299 4.94752L24.9158 20.9422C24.8872 22.0464 25.7592 22.9647 26.8634 22.9933C27.9676 23.0218 28.8859 22.1499 28.9144 21.0457L29.3803 3.05172ZM3.37714 28.5502L28.7581 4.4503L26.0039 1.54961L0.622863 25.6495L3.37714 28.5502Z" fill="currentColor"/>
+                </svg>                  
+              </span>
+              <div class="cs-iconbox_in">
+                <h2 class="cs-iconbox_title">UI/UX & Website Design</h2>
+                <div class="cs-iconbox_subtitle">
+                  We design modern, user-friendly websites that impress visitors and convert them into loyal customers.</div>
+              </div>
+            </a>
+          </div>
+          <div class="cs-hover_tab">
+            <a href="#" class="cs-iconbox cs-style3">
+              <div class="cs-image_layer cs-style1 cs-size_md">
+                <div class="cs-image_layer_in">
+                  <img src="assets/img/Image 3@3x.jpg" alt="Image" class="w-100 cs-radius_15">
+                </div>
+              </div>
+              <span class="cs-iconbox_icon cs-center">
+                <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.3803 3.05172C29.4089 1.94752 28.537 1.02921 27.4328 1.00062L9.43879 0.534749C8.33459 0.506159 7.41628 1.37811 7.38769 2.48231C7.35911 3.58651 8.23106 4.50482 9.33526 4.53341L25.3299 4.94752L24.9158 20.9422C24.8872 22.0464 25.7592 22.9647 26.8634 22.9933C27.9676 23.0218 28.8859 22.1499 28.9144 21.0457L29.3803 3.05172ZM3.37714 28.5502L28.7581 4.4503L26.0039 1.54961L0.622863 25.6495L3.37714 28.5502Z" fill="currentColor"/>
+                </svg>                  
+              </span>
+              <div class="cs-iconbox_in">
+                <h2 class="cs-iconbox_title">Photography & Videography</h2>
+                <div class="cs-iconbox_subtitle">
+                  We craft stunning product photography and cinematic videos that showcase your brand with precision and captivate audiences through engaging storytelling.
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cs-hover_tab">
+            <a href="#" class="cs-iconbox cs-style3">
+              <div class="cs-image_layer cs-style1 cs-size_md">
+                <div class="cs-image_layer_in">
+                  <img src="assets/img/Image 6@3x.jpg" alt="Image" class="w-100 cs-radius_15">
+                </div>
+              </div>
+              <span class="cs-iconbox_icon cs-center">
+                <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.3803 3.05172C29.4089 1.94752 28.537 1.02921 27.4328 1.00062L9.43879 0.534749C8.33459 0.506159 7.41628 1.37811 7.38769 2.48231C7.35911 3.58651 8.23106 4.50482 9.33526 4.53341L25.3299 4.94752L24.9158 20.9422C24.8872 22.0464 25.7592 22.9647 26.8634 22.9933C27.9676 23.0218 28.8859 22.1499 28.9144 21.0457L29.3803 3.05172ZM3.37714 28.5502L28.7581 4.4503L26.0039 1.54961L0.622863 25.6495L3.37714 28.5502Z" fill="currentColor"/>
+                </svg>                  
+              </span>
+              <div class="cs-iconbox_in">
+                <h2 class="cs-iconbox_title">Digital Marketing</h2>
+                <div class="cs-iconbox_subtitle">In today’s digital-first world, your online presence can make or break your business. We design data-driven digital marketing strategies that help your brand grow, engage, and convert its audience.</div>
+              </div>
+            </a>
+          </div>
+          <div class="cs-hover_tab">
+            <a href="#" class="cs-iconbox cs-style3">
+              <div class="cs-image_layer cs-style1 cs-size_md">
+                <div class="cs-image_layer_in">
+                  <img src="assets/img/service_1.jpeg" alt="Image" class="w-100 cs-radius_15" style="background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%;" >
+                </div>
+              </div>
+              <span class="cs-iconbox_icon cs-center">
+                <svg width="30" height="29" viewBox="0 0 30 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.3803 3.05172C29.4089 1.94752 28.537 1.02921 27.4328 1.00062L9.43879 0.534749C8.33459 0.506159 7.41628 1.37811 7.38769 2.48231C7.35911 3.58651 8.23106 4.50482 9.33526 4.53341L25.3299 4.94752L24.9158 20.9422C24.8872 22.0464 25.7592 22.9647 26.8634 22.9933C27.9676 23.0218 28.8859 22.1499 28.9144 21.0457L29.3803 3.05172ZM3.37714 28.5502L28.7581 4.4503L26.0039 1.54961L0.622863 25.6495L3.37714 28.5502Z" fill="currentColor"/>
+                </svg>                  
+              </span>
+              <div class="cs-iconbox_in">
+                <h2 class="cs-iconbox_title">Graphic Design</h2>
+                <div class="cs-iconbox_subtitle">We craft memorable visual identities—logos, marketing materials, and digital assets—that tell your brand's story and set you apart.</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End services Project -->
+
   <div class="cs-height_125 cs-height_lg_55"></div>
   <!-- Start Testimonial Section -->
   <section class="cs-gradient_bg_1 cs-shape_wrap_3 cs-parallax">
