--- a/Arino - Template/about.html
+++ b/Arino - Template/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Laralink">
-    <!-- Favicon Icon -->
-    <link rel="icon" href="assets/img/favicon.png">
+  <!-- Favicon Icon -->
+  <link rel="icon" href="assets/img/icons/favicon.ico">
     <!-- Site Title -->
     <title>Iconique Edge - Creative Agency</title>
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
